--- a/app/src/main/res/layout/map_demo_activity.xml
+++ b/app/src/main/res/layout/map_demo_activity.xml
@@ -8,6 +8,7 @@
 	   android:id="@+id/map"
 	   class="com.google.android.gms.maps.SupportMapFragment"
 	   android:layout_width="match_parent"
-	   android:layout_height="match_parent"/>
+	   android:layout_height="match_parent"
+		tools:layout="@layout/map_demo_activity" />
     
 </RelativeLayout>
